checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000110068.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#40: 
> fs/cifs/cifsfs.c:357: error: implicit declaration of function 'cifs_show_address'

WARNING:UNKNOWN_COMMIT_ID: Unknown commit id '8616e0fc1e27295316f9821a883f0e9fa6f8200f', maybe rebased or not pulled?
#42: 
> Caused by commit 8616e0fc1e27295316f9821a883f0e9fa6f8200f ("cifs: remove

ERROR:CORRUPTED_PATCH: patch seems to be corrupt (line wrapped?)
#86: FILE: fs/cifs/cifsfs.c:353:
m)

The patch seems to be corrupted or lines are wrapped.
Please regenerate the patch file before sending it to the maintainer.

CHECK:SPACING: No space is necessary after a cast
#104: FILE: fs/cifs/netmisc.c:169:
+	struct sockaddr_in6 *s6 =3D (struct sockaddr_in6 *) dst;

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

WARNING:SPACING: space prohibited between function name and open parenthesis '('
#104: FILE: fs/cifs/netmisc.c:169:
+	struct sockaddr_in6 *s6 =3D (struct sockaddr_in6 *) dst;

ERROR:SPACING: spaces required around that '=' (ctx:WxV)
#104: FILE: fs/cifs/netmisc.c:169:
+	struct sockaddr_in6 *s6 =3D (struct sockaddr_in6 *) dst;
 	                        ^

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000110068.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 2 errors, 3 warnings, 1 checks, 22 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000110068.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
